# Health-Reminder-Tracker

./: .env.example  .gitignore  NOTIFICATION_INTEGRATION_GUIDE.txt  NOTIFICATION_REFERENCE_GUIDE.txt  README.md  add_health_records.py  add_test_users.py  ai_endpoints.py  ai_routes.py  ai_service.py  backend.py  backend_ai_endpoints.py  backend_backup.py  backend_complete.py  backend_fixed_notifications.py  backend_notifications.py  backend_old_backup.py  backend_update.py  check_database.py  complete_patient_dashboard.py  complete_test_suite.py  dashboard.py  dashboard_simple.py  dashboard_standalone.py  desktop_sos.py  docker-compose.yml  email_sos.py  final_test.py  main.py  medicine_reminder.py  notification_service.py  project_tree.txt  pyproject.toml  quick_test.ps1  quick_test_fixed.ps1  render.yaml  requirements.txt  seed_data.py  telegram_sos.py  test_ai_service.py  (+10 more)
api/: index.py
frontend/: index.html  package-lock.json  package.json  test_dashboard.html
frontend/backup/: App.jsx.bak  index.css.bak
frontend/public/: manifest.json
frontend/rebuild-backup/: App.jsx.bak  index.css.bak
frontend/src/: AIHealthAssistant.tsx  App.jsx  App.tsx  App.tsx.backup  App.tsx.backup_ai  App.tsx.backup_emoji  App.tsx.backup_final  App.tsx.basic  HealthChart.tsx  HealthRiskPredictor.tsx  HealthTracker.tsx  HealthTrendAnalyzer.tsx  HospitalFinder.tsx  VoiceInput.jsx  VoiceInput.tsx  api.ts  caregiver_registration.txt  darkModeContext.tsx  drugInteractions.ts  index.css  main.tsx  notificationService.ts  pdfExport.ts
frontend/src/backup_broken/: App.backup.jsx  App.jsx
(+8 files in other folders)
